fix: Fix overflow issue on Chromium browsers

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,6 +17,9 @@ html {
 }
 
 body {
+	max-width: 100vw;
+	overflow-x: hidden;
+	scroll-behavior: smooth;
 	font-size: 1.8rem;
 	margin: 0;
 }
